<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.erskine.stuart.starwarsapp.BuildDicePoolActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/AppBackdrop"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/theFrameLayout"
        android:layout_weight="1"
        android:visibility="visible"
        >
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_weight="0"
        android:visibility="visible"
        >
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/theAbilityButton"
            android:text="@string/die_ability"
            android:background="@drawable/green"
            android:layout_gravity="center"
            android:scaleType="center"
            android:onClick="addAbilityDie"
            style="@style/ImageButtonStyle"
            />
        <ImageButton
            android:id="@+id/theProficiencyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/yellow"
            android:scaleType="center"
            android:text="@string/die_proficiency"
            android:onClick="addProficiencyDie"
            style="@style/ImageButtonStyle"
            />

        <ImageButton
            android:id="@+id/theBoostButton"
            style="@style/ImageButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/blue"
            android:onClick="addBoostDie"
            android:scaleType="center"
            android:text="@string/die_boost" />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/theForceButton"
            android:text="@string/die_force"
            android:background="@drawable/white"
            android:layout_gravity="center"
            android:scaleType="center"
            android:onClick="addForceDie"
            style="@style/ImageButtonStyle"
            />
        >
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/theDifficultyButton"
            android:text="@string/die_difficulty"
            android:background="@drawable/purple"
            android:layout_gravity="center"
            android:scaleType="center"
            android:onClick="addDifficultyDie"
            style="@style/ImageButtonStyle"
            />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/theChallengeButton"
            android:text="@string/die_challenge"
            android:background="@drawable/red"
            android:scaleType="fitCenter"
            android:onClick="addChallengeDie"
            style="@style/ImageButtonStyle"
            />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/theSetbackButton"
            android:text="@string/die_setback"
            android:background="@drawable/black"
            android:layout_gravity="center"
            android:scaleType="center"
            android:onClick="addSetbackDie"
            style="@style/ImageButtonStyle"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:id="@+id/theRollDiceButton"
                android:onClick="rollDice"
                android:scaleType="center"
                android:src="@drawable/ic_random_black_24dp"
                style="@style/ImageButtonStyle"
                />
        </FrameLayout>
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            >
            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:id="@+id/theClearDiceButton"
                android:onClick="clearDice"
                android:scaleType="center"
                android:src="@drawable/ic_clear_black_24dp"
                style="@style/ImageButtonStyle"
                />
        </FrameLayout>
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:id="@+id/theSaveDiceButton"
                android:onClick="onClickSaveButton"
                android:scaleType="center"
                android:src="@drawable/ic_save_black_24dp"
                style="@style/ImageButtonStyle"
                />
        </FrameLayout>
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:id="@+id/theCancelButton"
                android:onClick="onClickCancelButton"
                android:scaleType="center"
                android:src="@drawable/ic_cancel_black_24dp"
                style="@style/ImageButtonStyle"
                />
        </FrameLayout>

    </LinearLayout>

</android.support.v7.widget.LinearLayoutCompat>
